[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://ship.png" type="Texture" id=2]
[ext_resource path="res://Score.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="Player" type="KinematicBody2D"]
collision_layer = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 24 )

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2( 0, -23.307 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RestartMessage" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 453.005
margin_top = 295.201
margin_right = 563.005
margin_bottom = 309.201
text = "Press R to restart"

[node name="ScoreBoard" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Score: "
script = ExtResource( 3 )
